Fixed layout bugs on IE/EDGE

--- a/client/styles/components/icon.scss
+++ b/client/styles/components/icon.scss
@@ -2,4 +2,5 @@
 
 .icon-container > .icon {
   height: 1em;
+  width: 1em;
 }
